--- a/package.json
+++ b/package.json
@@ -11,7 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "@types/busboy": "^1.5.0",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "busboy": "^1.6.0",
-    "glob": "^9.2.1"
+    "express": "^4.18.2",
+    "glob": "^9.2.1",
+    "swagger-ui-express": "^4.6.2",
+    "yamljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.14.6",
+    "nodemon": "^2.0.21",
+    "typescript": "^4.9.5"
   }
 }
